# core-lib

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
core_lib/domain/: __init__.py  project.py  project_create_args.py  project_update_args.py  user.py  user_create_args.py  user_update_args.py
core_lib/events/: __init__.py  created_event.py  event.py
core_lib/events/emitter/: __init__.py  event_emitter.py  noop.py  rabbitmq_fanout_emitter.py
core_lib/orm/: __init__.py  project.py  user.py
core_lib/repos/: __init__.py
core_lib/repos/project/: __init__.py  noop.py  project_repository.py  sql_alchemy.py
core_lib/repos/user/: __init__.py  noop.py  sql_alchemy.py  user_repo.py
tests/: test_rabbitmq_fanout_emitter.py  test_sql_alchemy_project_repo.py  test_sql_alchemy_user_repo.py
