[project]
name = "core-lib"
version = "0.1.0"
description = "Shared library for BotForge micro-services."
authors = [
    {name = "Shea Harrington",email = "sheaharrington@outlook.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pydantic[email] (>=2.11.3,<3.0.0)",
    "aio-pika (>=9.5.5,<10.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-asyncio (>=0.26.0,<0.27.0)",
    "pytest-mock (>=3.14.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"  # or "module", "session", etc.
